compiler/testData/diagnostics/tests/enum/enumMissingName.kt
// Error: name should present
enum class<!SYNTAX!><!>(val rgb : Int) {
    RED(0xFF000),
    GREEN(0x00FF00),
    BLUE(0x0000FF)
}